retirada do header

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="container">
             <img src="logo-help.png" alt="Logo da Help!" class="logo">
-            <a href="#contato" class="btn-whatsapp-header">Fale Conosco</a>
+            <a href="#contato" class="btn-cta-header">Fale Conosco</a>
         </div>
-    </header>
+    </header> -->
 
 
     <main>
@@ -31,7 +31,8 @@
                         do mercado.</p>
 
                     <a href="#contato" class="btn-whatsapp-main">
-                        <i class="bi bi-whatsapp"></i> Fale agora por WhatsApp
+                        <i class="bi bi-whatsapp"></i>
+                        Fale agora por WhatsApp
                     </a>
                 </div>
                 <div class="hero-image">
@@ -87,9 +88,10 @@
                 <p>Clique no botão abaixo e fale com um de nossos especialistas agora mesmo para liberar seu crédito.
                 </p>
 
-                <a href="https://wa.me/SEUNUMERO?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20antecipação%20do%20FGTS."
+                <a href="https://wa.me/SEUNUMERO?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20o%20Empréstimo%20Consignado%20CLT."
                     target="_blank" class="btn-whatsapp-main cta-button">
-                    <i class="bi bi-whatsapp"></i> Simular minha antecipação
+                    <i class="bi bi-whatsapp"></i>
+                    Simular minha antecipação
                 </a>
             </div>
         </section>
