atualização da imagem

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </a>
                 </div>
                 <div class="hero-image">
-                    <img src="/retrato-de-um-homem-bonito.jpg" alt="Homem sorrindo feliz com a antecipação do FGTS">
+                    <img src="/imagem-fgts copiar.jpg" alt="Homem sorrindo feliz com a antecipação do FGTS">
                 </div>
             </div>
         </section>
