--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <span class="subtitle">ANTECIPAÇÃO DO SAQUE-ANIVERSÁRIO FGTS</span>
-                    <h2>Precisa de dinheiro? A help! ajuda.</h2>
+                    <h2>Precisa de dinheiro? <br> A help! ajuda.</h2>
                     <p>Use seu saldo FGTS para realizar seus planos. Crédito seguro, rápido e com as melhores condições
                         do mercado.</p>
 
