alteraçção no botão de whatsApp

--- a/index.html
+++ b/index.html
@@ -13,14 +13,6 @@
 
 <body>
 
-    <!-- <header class="header">
-        <div class="container">
-            <img src="logo-help.png" alt="Logo da Help!" class="logo">
-            <a href="#contato" class="btn-cta-header">Fale Conosco</a>
-        </div>
-    </header> -->
-
-
     <main>
         <section class="hero">
             <div class="container hero-content">
@@ -30,7 +22,7 @@
                     <p>Use seu saldo FGTS para realizar seus planos. Crédito seguro, rápido e com as melhores condições
                         do mercado.</p>
 
-                    <a href="#contato" class="btn-whatsapp-main">
+                    <a href="https://wa.me/556196266093?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Antecipação%20Saque-Aniversário%20FGTS." class="btn-whatsapp-main">
                         <i class="bi bi-whatsapp"></i>
                         Fale agora por WhatsApp
                     </a>
@@ -88,7 +80,7 @@
                 <p>Clique no botão abaixo e fale com um de nossos especialistas agora mesmo para liberar seu crédito.
                 </p>
 
-                <a href="https://wa.me/SEUNUMERO?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20o%20Empréstimo%20Consignado%20CLT."
+                <a href="https://wa.me/556196266093?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Antecipação%20Saque-Aniversário%20FGTS."
                     target="_blank" class="btn-whatsapp-main cta-button">
                     <i class="bi bi-whatsapp"></i>
                     Simular minha antecipação
